Fix welcome text position on bigger screens to align with hero image

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -324,3 +324,17 @@ section[id^="story"] img {
     height: 30rem;
   }
 }
+
+@media (min-width: 1400px){
+  .welcome-text {
+    padding-right: 9rem;
+  }
+  .hero-image {
+    height: 89rem;
+  }
+}
+@media (min-width: 1650px){
+  .welcome-text {
+    padding-right: 15rem;
+  }
+}
